--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,12 @@ backports.zoneinfo==0.2.1
 contourpy==1.0.5
 cycler==0.11.0
 Django==4.1.2
+django-cleanup==6.0.0
+django-cors-headers==3.13.0
+djangorestframework==3.14.0
 fonttools==4.38.0
 imageio==2.22.2
+imutils==0.5.4
 kiwisolver==1.4.4
 matplotlib==3.6.1
 networkx==2.8.7
@@ -14,6 +18,7 @@ packaging==21.3
 Pillow==9.2.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2022.5
 PyWavelets==1.4.1
 scikit-image==0.19.3
 scipy==1.9.3
